--- a/ChangeCycleOfTheDay/pom.xml
+++ b/ChangeCycleOfTheDay/pom.xml
@@ -3,4 +3,45 @@
   <groupId>com.github.ta</groupId>
   <artifactId>ChangeCycleOfTheDay</artifactId>
   <version>1.0.0</version>
+  
+  <!-- ↓ Spigot-repository -->
+  <repositories>
+    <repository>
+      <id>spigot-repo</id>
+      <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+    </repository>
+  </repositories>
+
+  <!-- ↓ Spigot-API -->
+  <dependencies>
+    <dependency>
+      <groupId>org.spigotmc</groupId>
+      <artifactId>spigot-api</artifactId>
+
+      <!-- ↓ (Minecraftバージョン)-R0.1-SNAPSHOT -->
+      <version>1.19.4-R0.1-SNAPSHOT</version>
+
+      <scope>provided</scope>
+    </dependency>
+  </dependencies>
+
+  <!-- ↓ プロパティ設定 -->
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <!-- ↓ Java version 17 -->
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+  </properties>
+
+  <!-- plugin.yml を pom.xml と連動させる -->
+  <build>
+    <resources>
+      <resource>
+        <targetPath>.</targetPath>
+        <filtering>true</filtering>
+        <directory>src/main/resources/</directory>
+      </resource>
+    </resources>
+  </build>
+  
 </project>
